<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>example</groupId>
    <artifactId>kafka-streams-jib-example</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <logback.version>1.2.13</logback.version>
        <kafka.version>2.1.0</kafka.version>

        <jib-maven-plugin.version>1.0.2</jib-maven-plugin.version>
    </properties>

    <dependencies>
        <!-- Logback for slf4j -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <!-- Apache Kafka dependencies -->
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka_2.11</artifactId>
            <version>${kafka.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-streams</artifactId>
            <version>${kafka.version}</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>upper</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <mainClass>example.kafkastreams.ToUpperCaseProcessor</mainClass>
                <jib.container.name>kafka-streams-jib-example</jib.container.name>
            </properties>
        </profile>
        <profile>
            <id>consumer-offsets</id>
            <properties>
                <mainClass>example.kafkastreams.ConsumerOffsetsToJSONProcessor</mainClass>
                <jib.container.name>kafka-streams-jib-example-2</jib.container.name>
            </properties>
        </profile>
    </profiles>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <version>${jib-maven-plugin.version}</version>
                    <configuration>
                        <to>
                            <image>${jib.container.name}</image>
                        </to>
                        <container>
                            <mainClass>${mainClass}</mainClass>
                            <!-- good defaults intended for containers -->
                            <jvmFlags>
                                <jvmFlag>-Djava.awt.headless=true</jvmFlag>
                                <jvmFlag>-XX:+UnlockExperimentalVMOptions</jvmFlag>
                                <jvmFlag>-XX:+UseCGroupMemoryLimitForHeap</jvmFlag>
                                <jvmFlag>-XX:InitialRAMFraction=2</jvmFlag>
                                <jvmFlag>-XX:MinRAMFraction=2</jvmFlag>
                                <jvmFlag>-XX:MaxRAMFraction=2</jvmFlag>
                                <jvmFlag>-XX:+UseG1GC</jvmFlag>
                                <jvmFlag>-XX:MaxGCPauseMillis=100</jvmFlag>
                                <jvmFlag>-XX:+UseStringDeduplication</jvmFlag>
                            </jvmFlags>
                        </container>
                    </configuration>
                    <executions>
                        <execution>
                            <id>dockerBuild</id>
                            <goals>
                                <goal>dockerBuild</goal>
                            </goals>
                            <phase>package</phase>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>1.6.0</version>
                    <configuration>
                        <mainClass>${mainClass}</mainClass>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
